refactor: change path of deactivating a user
